resolvers initialization